# AutoCommitMessage

./: .gitignore  README.md  main.py  pyproject.toml
src/auto_commit_message/: config.yaml  main.py
