[project]
name = "AutoCommitMessage"
version = "0.1.0"
description = "This is a Python project that automatically generates concise git commit messages based on the changes in your code using a local Ollama model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "colored>=2.3.2",
    "ollama>=0.6.2",
]
